--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ const services = [
 ];
 ---
 
-<Layout>
+<Layout title={SITE_NAME}>
   <div class="flex flex-col min-h-screen">
     <main class="flex-1">
       <section
